nullaway_error_ea83c552-1270-4344-9b9c-ac46afdcccab.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/AbstractInstanceRegistry.java:380: error: [NullAway] dereferenced expression overriddenInstanceStatus is @Nullable
                                    overriddenInstanceStatus.name(),
                                                            ^
